style: fixed invisible text

--- a/src/styles/pages/Home.module.scss
+++ b/src/styles/pages/Home.module.scss
@@ -23,7 +23,7 @@
       .subheading {
         font-size: 1.1rem;
         font-weight: 200;
-
+        overflow-wrap: normal;
         letter-spacing: 0.5em;
         margin: 0;
       }
